# mocha

./: .clang-format  .gitignore  LICENSE  README.md  example.ff  example.ll  install  makefile  meson.build  readme
.zed/: debug.json
doc/: bs.rst  buildsystem.rst  builtin.txt  builtins.rst  contributing.rst  errors.rst  generate-html.py  grammar.rst  keywords.rst  keywords.txt  mangling.rst  mangling.txt  mx.rst  nxg.rst  parsing-values.rst  std.rst  testing.rst  types.rst  types.txt  usage.rst  writing-modules.rst
doc/mx/: alloc.rst
doc/nxg/: alloc.rst
include/: parser.h
include/mocha/: mocha.h  tools.h  utils.h
include/mocha/tools/: argparse.h  args.h  config.h  project.h
include/mocha/utils/: error.h  file.h  project.h  utils.h
include/nxg/: emit.h  error.h  file.h  generate.h  keyword.h  llvm.h  module.h  nxg.h  parser.h  tokenize.h  type.h
lib/: makefile  mocha.h
lib/builtin/: cast.c  cast.ff  cast.x  stack.c  stack.x  string.ff  string.x
lib/std/: coffee.h  fs.c  fs.ff  io.c  io.ff  io.x  mocha.h  os.c  os.ff  print.c  print.ff  sys.ff  time.c  time.ff
lib/std/builtin/: cast.c  cf.h  cf_types.h  dev.c  dev.ff  list.c  list.ff  print.c  print.ff  stack.c  stack.ff  stacktrace.c  stacktrace.ff  string.c  string.ff  typeof.ff
lib/std/std/: coffee.h  io.c  sys.c  sys.ff
mx/: compile_commands.json  example.ff  makefile  mx  readme  user.ff
mx/include/mx/: mx.h  opt.h
mx/include/mx/bs/: buildfile.h
mx/include/mx/cc/: alloc.h  emit.h  mangle.h  module.h  parser.h  tokenize.h  type.h  use.h
mx/include/mx/pkg/: pm.h
mx/include/mx/utils/: error.h  utils.h
mx/src/: mx.c
mx/src/bs/: buildfile.c
mx/src/cc/: alloc.c  build.c  debug.c  emit.c  error.c  file.c  keyword.c  mangle.c  module.c  parser.c  tokenize.c  type.c
mx/src/cc/parser/: call.c  dump.c  fn.c  is.c  use.c  value.c
mx/src/pkg/: pm.c
nxg/: .coffee  a.out  example.ff  hello.c  hello.ff  main  main.ff  meson.build  readme
nxg/include/nxg/: emit.h  error.h  mangle.h  module.h  nxg.h  parser.h  tokenize.h  type.h
nxg/include/nxg/bs/: buildfile.h
nxg/include/nxg/cc/: alloc.h  emit.h  expr.h  fn_resolve.h  keyword.h  mangle.h  module.h  parser.h  tokenize.h  type.h  use.h
nxg/include/nxg/pkg/: pm.h
nxg/include/nxg/utils/: error.h  file.h  utils.h
nxg/src/: build.c  emit.c  error.c  keyword.c  mangle.c  nxg.c  parser.c  tokenize.c  type.c
nxg/src/bs/: buildfile.c
nxg/src/cc/: alloc.c  build.c  emit.c  error.c  file.c  keyword.c  mangle.c  module.c  parser.c  tokenize.c  type.c
nxg/src/cc/parser/: call.c  dump.c  fn.c  free.c  is.c  use.c  value.c
nxg/src/pkg/: pm.c
src/: emit.c  error.c  file.c  generate.c  keyword.c  llvm.c  mocha.c  module.c  nxg.c  parser.c  tokenize.c  type.c
src/tools/: argparse.c  args.c  config.c  project.c
src/utils/: error.c  file.c  utils.c
test/: mochatest  xtest
test/language/cannot-fit-int/: test.info  test.x
test/language/cast-higher/: test.x
test/language/cast-int-ptr/: test.x
test/language/cast-lower/: test.x
test/language/cast-nullptr/: test.x
test/language/function-overload/: test.ff  test.x
test/language/if-else/: test.ff  test.x
test/language/int-convert/: test.ff  test.x
test/language/math-expressions/: test.result  test.x
test/language/method-call/: test.ff  test.result  test.x
test/language/method-overload/: test.ff  test.result  test.x
test/language/method-static-call/: test.ff  test.x
test/language/non-bool-condition/: test.x
test/language/operator-precendence/: test.ff  test.result  test.x
test/language/param-missing-type/: test.ff
test/language/pass-type-copy/: test.ff
test/language/pass-type-ref/: test.ff
test/language/type-access-fields/: test.ff  test.x
test/language/type-custom-drop/: test.ff  test.info  test.result  test.x
test/language/type-decl/: test.ff  test.x
test/language/use-list/: test.ff  test.x
test/language/use-module/: test.x
test/language/use-std/: test.x
test/std/io-print-bool/: test.ff
test/std/io-print-i32/: test.ff
test/std/io-print-i64/: test.ff
test/std/io-print-i8/: test.ff
test/std/io-print-str/: test.ff  test.info
test/std/os-path-basename/: test.ff
test/std/os-path-dirname/: test.ff  test.result
test/std/print-i32/: test.ff  test.info
test/std/print-str/: test.ff
tools/: cf-demangle.c  cf-demangle.cc
xc/: main  main.x  makefile  readme  xc
xc/src/: alloc.c  alloc.h  build.c  emit.c  emit.h  keyword.c  keyword.h  mangle.c  mangle.h  module.c  module.h  parser.c  parser.h  tokenize.c  tokenize.h  type.c  type.h  xc.c  xc.h
xc/src/parser/: call.c  dump.c  fn.c  is.c  value.c
xc/src/utils/: error.c  error.h  file.c  utils.c  utils.h
